@@ -26,10 +26,12 @@ public class ProductServiceImpl implements ProductService{
     @Override
     public List<Product> getBySellers(String seller) {
         logger.info(String.format("Attempting to retreive Products by Seller: %s", seller));
+
         return this.productDao.findBySeller(seller);
     }
 
     public Product getById(long productID) {
+
         logger.info(String.format("Attempting to Retrieve product by ID: %d", productID));
         Optional<Product> t = this.productDao.findById(productID);
         Product product = null;
@@ -38,13 +40,14 @@ public class ProductServiceImpl implements ProductService{
             logger.info(String.format("Successfully Retrieved product with ID: %d", productID));
         }else {
             logger.info(String.format("Product Not Found by ID: %d", productID));
+
         }
         return product;
     }
 
     @Override
     public List<Product> getByName(String name) {
-        //logger.info(STR."Attempting to Retreieve Products by name: \{name}");
+        //logger.info(STR."Attempting to Retrieve Products by name: \{name}");
         return this.productDao.findByName(name);
     }
 
@@ -68,6 +71,7 @@ public class ProductServiceImpl implements ProductService{
     public List<Product> getByCategory(String category) {
         List<Product> allProducts = this.productDao.findAll();
         List<Product> matchCategory = new ArrayList<>();
+
         for( Product product: allProducts){
             for(String productCategory : product.getCategories()){
                 if(productCategory.toLowerCase().contains(category.toLowerCase())){
@@ -100,7 +104,7 @@ public class ProductServiceImpl implements ProductService{
     @Override
     public List<Product> addProduct(List<Product> products) {
         if(products.size() == 1){
-            return List.of(this.productDao.save(products.getFirst()));
+            return List.of(this.productDao.save(products.get(0)));
         }
         else{
             return this.productDao.saveAll(products);
@@ -110,7 +114,7 @@ public class ProductServiceImpl implements ProductService{
     @Override
     public List<Product> updateProduct(List<Product> products) {
         if(products.size() == 1){
-            return List.of(this.productDao.save(products.getFirst()));
+            return List.of(this.productDao.save(products.get(0)));
         }
         else{
             return this.productDao.saveAll(products);
